--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,10 +1,12 @@
-<h1>Home Page</h1>
-
-<a routerLink="/about">About</a>
-<br>
-<a routerLink="/servicess">Servicess</a>
-<br>
-<a routerLink="/hiring">Hiring</a>
-
+<div class="navbar">
+    <ul>
+        <li class="logo"><a routerLink="/">LOGO</a></li>
+        <li><a routerLink="/about">HOME</a></li>
+        <li><a routerLink="/servicess">FEATURES</a></li>
+        <li><a routerLink="/hiring">PRODUCT</a></li>
+        <li><a routerLink="">GALARY</a></li>
+        <li class="contact">CONTACT US</li>
+    </ul>
+</div>
 
 <router-outlet></router-outlet>
