add style to navbar

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,12 +1,14 @@
 <div class="navbar">
+    <div class="logo">
+        <a routerLink="/"> <span>CLASIKA</span></a>
+    </div>
     <ul>
-        <li class="logo"><a routerLink="/">LOGO</a></li>
         <li><a routerLink="/about">HOME</a></li>
         <li><a routerLink="/servicess">FEATURES</a></li>
         <li><a routerLink="/hiring">PRODUCT</a></li>
         <li><a routerLink="">GALARY</a></li>
-        <li class="contact">CONTACT US</li>
     </ul>
+    <button class="contact_me">Contact me</button>
 </div>
 
 <router-outlet></router-outlet>
