added partenrs logos

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -26,8 +26,15 @@
     </section>
 
     <section class="right_hero">
-        <img class="img-responsive" src="assets\images\right_hero.png">
+        <img  src="assets\images\right_hero.png">
     </section>
+</div>
+<div class="partners">
+    <img src="assets\images\partners1.png" alt="">
+    <img src="assets\images\partners2.png" alt="">
+    <img src="assets\images\partners3.png" alt="">
+    <img src="assets\images\partners4.png" alt="">
+    <img src="assets\images\partners5.png" alt="">
 </div>
 
 <router-outlet></router-outlet>
