--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -109,3 +109,17 @@
     flex-direction: row-reverse;
   }
 }
+
+.partners{
+  margin-top: 2rem;
+  width: 100%;
+  height: 8rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #FFFBE9;
+  img{
+    height: 7rem;
+    width: 8rem;
+  }
+}
