getting all changes to gitub

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -26,7 +26,7 @@
     </section>
 
     <section class="right_hero">
-        <img  src="assets\images\right_hero.png">
+        <img src="assets\images\right_hero.png">
     </section>
 </div>
 <div class="partners">
@@ -35,6 +35,19 @@
     <img src="assets\images\partners3.png" alt="">
     <img src="assets\images\partners4.png" alt="">
     <img src="assets\images\partners5.png" alt="">
+</div>
+
+<div class="aesthetic_room">
+    <div class="upper_lines">
+        <p>An aesthetic room is given harmony</p>
+        <p>world award</p>
+    </div>
+    <div>
+        <img src="" alt="" class="left">
+        <div class="right">
+            
+        </div>
+    </div>
 </div>
 
 <router-outlet></router-outlet>
