start angain with another project

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,53 +1,1 @@
-<div class="navbar">
-    <div class="logo">
-        <a routerLink="/"> <span>CLASIKA</span></a>
-    </div>
-    <ul>
-        <li><a routerLink="/about">HOME</a></li>
-        <li><a routerLink="/servicess">FEATURES</a></li>
-        <li><a routerLink="/hiring">PRODUCT</a></li>
-        <li><a routerLink="">GALARY</a></li>
-    </ul>
-    <button class="contact_me">CONTACT US</button>
-</div>
-
-<div class="hero_section">
-    <section class="left_hero">
-        <div class="line">
-        </div>
-        <div class="contents">
-            <p>offer for best interior</p>
-            <p>An aesthetic room is given hermony</p>
-            <p>Change your view to realize a neat and aesthic corner of the house and amaze everyone, especially your
-                nuclear family. Make every moment of your equipment a valuable item
-            </p>
-            <button class="btn">Explore NOW</button>
-        </div>
-    </section>
-
-    <section class="right_hero">
-        <img src="assets\images\right_hero.png">
-    </section>
-</div>
-<div class="partners">
-    <img src="assets\images\partners1.png" alt="">
-    <img src="assets\images\partners2.png" alt="">
-    <img src="assets\images\partners3.png" alt="">
-    <img src="assets\images\partners4.png" alt="">
-    <img src="assets\images\partners5.png" alt="">
-</div>
-
-<div class="aesthetic_room">
-    <div class="upper_lines">
-        <p>An aesthetic room is given harmony</p>
-        <p>world award</p>
-    </div>
-    <div>
-        <img src="" alt="" class="left">
-        <div class="right">
-            
-        </div>
-    </div>
-</div>
-
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
