some changes at navbar

--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,14 +1,21 @@
-<div id='nav'>
-    <!-- <img src="logo.jpg" id="logo" alt="logo" /> -->
-    <p id="logo">LOGO</p>
-    <nav>
+<div id="nav">
+    <div class="tab">
+      <button><i class="bx bx-menu"></i></button>
+      <img src="logo.jpg" id="logo" alt="logo" />
+      <button><i class="bx bx-user-circle"></i></button>
+      <button><i class="bx bx-cart"></i></button>
+    </div>
+    <div class="desktop">
+      <nav>
         <ul class="navmenu">
-            <li><a href="*">Menu</a></li>
-            <li><a href="*">FAQs</a></li>
-            <li><a href="*">About Us</a></li>
-            <li><a href="*">My Orders</a></li>
-            <li><button>Acounts</button></li>
-            <li><button>Cart</button></li>
+          <li><a href="#">Menu</a></li>
+          <li><a href="#">FAQs</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">My Orders</a></li>
+          <li><button>Accounts</button></li>
+          <li><button>Cart</button></li>
         </ul>
-    </nav>
-</div>
+      </nav>
+    </div>
+  </div>
+  
