--- a/client/src/app/navbar/navbar.component.scss
+++ b/client/src/app/navbar/navbar.component.scss
@@ -8,26 +8,31 @@ body {
   float: left;
   display: inline-block;
   margin-left: 3rem;
-  padding: 10px 9px 10px 9px; /*nav bar text*/
+  padding: 10px 9px 10px 9px; /* nav bar text */
 }
 
 #nav {
   width: 100%;
   height: 2.5rem;
-  background-color: red; /*turns nav bar white*/
-  width: 100%;
+  background-color: red; /* turns nav bar white */
 }
+
+.tab {
+  display: none;
+}
+
 .navmenu {
   float: right;
-  list-style: none; /*gets rid of bullet points*/
+  list-style: none; /* gets rid of bullet points */
   text-align: left;
   padding: 0px -10px 0px -10px;
   margin-right: 3rem;
 }
+
 .navmenu > li {
-  /*max-width: 768px*/
-  display: Inline-block;
-  padding: 10px 9px 10px 9px; /*nav bar text*/
+  /* max-width: 768px */
+  display: inline-block;
+  padding: 10px 9px 10px 9px; /* nav bar text */
 }
 
 .navmenu > li a {
@@ -37,11 +42,12 @@ body {
   padding: 5px 0px 5px 0px;
 }
 
-@media handheld and (max-width: 768px), screen and (max-width: 768px) {
-  .nav {
+@media screen and (max-width: 768px) {
+  .desktop {
     display: none;
   }
-  #logo {
-    text-align: center;
+
+  .tab {
+    display: block;
   }
 }
