--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,21 +1,23 @@
 <div id="nav">
-    <div class="tab">
-      <button><i class="bx bx-menu"></i></button>
-      <img src="logo.jpg" id="logo" alt="logo" />
-      <button><i class="bx bx-user-circle"></i></button>
-      <button><i class="bx bx-cart"></i></button>
-    </div>
-    <div class="desktop">
-      <nav>
-        <ul class="navmenu">
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">FAQs</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">My Orders</a></li>
-          <li><button>Accounts</button></li>
-          <li><button>Cart</button></li>
-        </ul>
-      </nav>
+  <div class="tab">
+    <button class="menu_btn"><i class="bx bx-menu bx-sm"></i></button>
+    <img src="logo.jpg" id="logo" alt="logo" />
+    <div class="user_card_btn">
+      <button class="user_btn"><i class='bx bx-user'></i></button>
+      <button class="cart_btn"><i class="bx bx-cart"></i></button>
     </div>
   </div>
-  
+  <div class="desktop">
+    <nav>
+      <img src="logo.jpg" id="logo" alt="logo" />
+      <ul class="navmenu">
+        <li><a href="#">Menu</a></li>
+        <li><a href="#">FAQs</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">My Orders</a></li>
+        <li><button class="accounts_btn">Accounts</button></li>
+        <li><button class="cart_btn"><i class='bx bx-cart'></i></button></li>
+      </ul>
+    </nav>
+  </div>
+</div>
