--- a/client/src/app/navbar/navbar.component.scss
+++ b/client/src/app/navbar/navbar.component.scss
@@ -1,11 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", serif;
 }
 
 #logo {
-  float: left;
+  // float: left;
   display: inline-block;
   margin-left: 3rem;
   padding: 10px 9px 10px 9px; /* nav bar text */
@@ -14,7 +13,7 @@ body {
 #nav {
   width: 100%;
   height: 2.5rem;
-  background-color: red; /* turns nav bar white */
+  // background-color: lightpink; /* turns nav bar white */
 }
 
 .tab {
@@ -27,19 +26,37 @@ body {
   text-align: left;
   padding: 0px -10px 0px -10px;
   margin-right: 3rem;
+  .accounts_btn {
+    border: 1px solid #c96c80;
+    border-radius: 5px;
+    color: #c96c80;
+    font-weight: 600;
+    padding: 0.2rem 0.32rem;
+  }
+  .cart_btn {
+    border: 1px solid #c96c80;
+    border-radius: 100%;
+    padding: 0.3rem 0.3rem 0.25rem 0.3rem;
+    color: white;
+    background-color: #c96c80;
+    margin: auto;
+    box-shadow: 0px 5px 10px #c96c80;
+  }
 }
 
 .navmenu > li {
   /* max-width: 768px */
   display: inline-block;
-  padding: 10px 9px 10px 9px; /* nav bar text */
+  padding: 10px 20px 10px 20px; /* nav bar text */
 }
 
 .navmenu > li a {
   text-decoration: none;
   color: blue;
   font-size: 14px;
+  font-weight: 800;
   padding: 5px 0px 5px 0px;
+  color: #c96c80;
 }
 
 @media screen and (max-width: 768px) {
@@ -48,6 +65,36 @@ body {
   }
 
   .tab {
-    display: block;
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 1rem;
+    align-items: center;
+    .user_card_btn button {
+      margin: 0px 0.5rem;
+    }
+    .cart_btn {
+      border: 1px solid #c96c80;
+      border-radius: 100%;
+      padding: 0.3rem 0.3rem 0.25rem 0.3rem;
+      color: white;
+      background-color: #c96c80;
+      margin: auto;
+      box-shadow: 0px 5px 10px #c96c80;
+    }
+    .user_btn {
+      border: 1px solid #c96c80;
+      border-radius: 100%;
+      color: #c96c80;
+      font-weight: 600;
+      padding: 0.3rem 0.3rem 0.25rem 0.3rem;
+    }
+    .menu_btn {
+      padding: 0;
+      border: none;
+      background: none;
+      color: #c96c80;
+      font-weight: 600;
+      padding: 0.3rem 0.3rem 0.25rem 0.3rem;
+    }
   }
 }
