--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div id="nav">
   <div class="tab">
     <button class="menu_btn"><i class="bx bx-menu bx-sm"></i></button>
-    <img src="logo.jpg" id="logo" alt="logo" />
+    <img src="assets\images\logo.png" id="logo" alt="logo" />
     <div class="user_card_btn">
       <button class="user_btn"><i class='bx bx-user'></i></button>
       <button class="cart_btn"><i class="bx bx-cart"></i></button>
@@ -9,7 +9,7 @@
   </div>
   <div class="desktop">
     <nav>
-      <img src="logo.jpg" id="logo" alt="logo" />
+      <img src="assets\images\logo.png" id="logo" alt="logo" />
       <ul class="navmenu">
         <li><a href="#">Menu</a></li>
         <li><a href="#">FAQs</a></li>
