--- a/client/src/app/navbar/navbar.component.scss
+++ b/client/src/app/navbar/navbar.component.scss
@@ -3,17 +3,18 @@ body {
   padding: 0;
 }
 
-#logo {
-  // float: left;
-  display: inline-block;
-  margin-left: 3rem;
-  padding: 10px 9px 10px 9px; /* nav bar text */
-}
-
 #nav {
   width: 100%;
   height: 2.5rem;
-  // background-color: lightpink; /* turns nav bar white */
+  .desktop {
+    img {
+      height: 4rem;
+      width: 4rem;
+      display: inline-block;
+      margin-left: 3rem;
+      padding: 10px 9px 10px 9px; /* nav bar text */
+    }
+  }
 }
 
 .tab {
@@ -25,7 +26,7 @@ body {
   list-style: none; /* gets rid of bullet points */
   text-align: left;
   padding: 0px -10px 0px -10px;
-  margin-right: 3rem;
+  margin: 1rem 2rem;
   .accounts_btn {
     border: 1px solid #c96c80;
     border-radius: 5px;
@@ -95,6 +96,11 @@ body {
       color: #c96c80;
       font-weight: 600;
       padding: 0.3rem 0.3rem 0.25rem 0.3rem;
+    }
+    #logo {
+      margin-left: 2rem;
+      height: 3rem;
+      width: 3rem;
     }
   }
 }
