--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,17 +1,20 @@
 <div class="home_page">
-
     <div class="hero_section">
-        <div class="left_hero">
-            <div>
-                <h1>Smoothies delivered at your door steps !</h1>
-                <p>Try out Smoothies customised and delivered at with all the nutritions packed</p>
-                <button class="Order_btn">Order Now</button>
+            <div class="left_hero">
+                <div>
+                    <p>Smoothies delivered at your door steps !</p>
+                    <p>Try out Smoothies customised and delivered at with all the nutritions packed</p>
+                    <button class="Order_btn">Order Now</button>
+                </div>
             </div>
-        </div>
-        <div class="right_hero">
-            <img src="assets\images\rightHero.png" id="" alt="logo" />
-        </div>
+            <div class="right_hero">
+                <img src="assets\images\rightHero.png" id="" alt="logo" />
+            </div>
+        
 
+        <div class="order_now">
+            <button class="Order_btn">Order Now</button>
+        </div>
     </div>
     <div class="offer_section">
 
