--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -16,14 +16,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      h1 {
-        font-size: 3rem;
+      p:first-child {
+        font-size: 2.5rem;
         font-weight: 1000;
-        margin: 1rem 0rem;
+        margin: 2rem 0rem;
       }
       button {
         font-weight: 1000;
-        margin: 1rem 0;
+        margin: 2rem 0;
         border: 1px solid #c96c80;
         border-radius: 8px;
         padding: 0.6rem 0.6rem 0.5rem 0.6rem;
@@ -32,21 +32,80 @@
         box-shadow: 0px 2px 10px #c96c80;
         &:hover {
           cursor: pointer;
-          border-radius: 10px;
           box-shadow: 1px 5px 10px #c96c80;
         }
       }
     }
     .right_hero {
-      //   background-color: lightcoral;
       height: 30rem;
       width: 40%;
       display: flex;
       justify-content: center;
       align-items: center;
       img {
-        height: 25rem;
-        width: 30rem;
+        height: 25em;
+        width: 30em;
+      }
+    }
+    .order_now {
+      display: none;
+    }
+  }
+}
+@media screen and (max-width: 766px) {
+  .home_page {
+    .hero_section {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      .left_hero {
+        // background-color: lightcoral;
+        height: 13rem;
+        width: 70vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        div p:first-child {
+            font-size: 1.5rem;
+            font-weight: 800;
+          }
+        button {
+          display: none;
+        }
+      }
+      .right_hero {
+        // background-color: lightblue;
+        height: 15rem;
+        width: 70vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+          height: 15rem;
+          width: 30rem;
+          width: auto;
+        }
+      }
+      .order_now {
+        display: block;
+        width: 70vw;
+        text-align: center;
+        button {
+          font-weight: 1000;
+          margin: 1rem 0;
+          border: 1px solid #c96c80;
+          border-radius: 8px;
+          padding: 0.6rem 0.6rem 0.5rem 0.6rem;
+          color: white;
+          background-color: #c96c80;
+          box-shadow: 0px 2px 10px #c96c80;
+          &:hover {
+            cursor: pointer;
+            box-shadow: 1px 5px 10px #c96c80;
+          }
+        }
       }
     }
   }
