all today work on github

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -2,3 +2,10 @@
   margin: 0px;
   padding: 0px;
 }
+
+.all-colors {
+  background-color: #fac2bc;
+  background-color: #db7f79;
+  background-color: #ecc08d;
+  background-color: #c96c80;
+}
