--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,29 +1,78 @@
 <div class="home_page">
-    <div class="hero_section">
-            <div class="left_hero">
-                <div>
-                    <p>Smoothies delivered at your door steps !</p>
-                    <p>Try out Smoothies customised and delivered at with all the nutritions packed</p>
-                    <button class="Order_btn">Order Now</button>
-                </div>
-            </div>
-            <div class="right_hero">
-                <img src="assets\images\rightHero.png" id="" alt="logo" />
-            </div>
-        
+  <div class="hero_section">
+    <div class="left_hero">
+      <div>
+        <p>Smoothies delivered at your door steps !</p>
+        <p>Try out Smoothies customised and delivered at with all the nutritions packed</p>
+        <button class="Order_btn">Order Now</button>
+      </div>
+    </div>
+    <div class="right_hero">
+      <img src="assets\images\rightHero.png" id="" alt="logo" />
+    </div>
+    <div class="order_now">
+      <button class="Order_btn">Order Now</button>
+    </div>
+  </div>
+  <h2 style="text-align: center;margin: 3rem 0px;">Checkout exciting offfers !</h2>
 
-        <div class="order_now">
-            <button class="Order_btn">Order Now</button>
+  <div class="offer_section">
+    <div class="all_card">
+      <div class="arrow" id="prev"><i class="fa-solid fa-chevron-left"></i></div>
+      <div class="arrow" id="next"><i class="fa-solid fa-chevron-right"></i></div>
+
+      <div id="carousel-vp">
+        <div id="card-inner">
+          <div class="card">
+            <img src="assets\images\offer1.png" alt="">
+            <div>
+              <p>Customise</p>
+              <p>On your first order for free no additional charges apply .!</p>
+              <button>Order Now</button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="assets\images\offer1.png" alt="">
+            <div>
+              <p>Customise</p>
+              <p>On your first order for free no additional charges apply .!</p>
+              <button>Order Now</button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="assets\images\offer1.png" alt="">
+            <div>
+              <p>Customise</p>
+              <p>On your first order for free no additional charges apply .!</p>
+              <button>Order Now</button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="assets\images\offer1.png" alt="">
+            <div>
+              <p>Customise</p>
+              <p>On your first order for free no additional charges apply .!</p>
+              <button>Order Now</button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="assets\images\offer1.png" alt="">
+            <div>
+              <p>Customise</p>
+              <p>On your first order for free no additional charges apply .!</p>
+              <button>Order Now</button>
+            </div>
+          </div>
+
         </div>
+      </div>
     </div>
-    <div class="offer_section">
+  </div>
+  <div class="discover_section">
 
-    </div>
-    <div class="discover_section">
+  </div>
+  <div class="custom_section">
 
-    </div>
-    <div class="custom_section">
-
-    </div>
+  </div>
 
 </div>
