offer section complet

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -18,12 +18,12 @@
 
   <div class="offer_section">
     <div class="all_card">
-      <div class="arrow" id="prev"><i class="fa-solid fa-chevron-left"></i></div>
-      <div class="arrow" id="next"><i class="fa-solid fa-chevron-right"></i></div>
+      <div class="arrow" id="prev"><i class='bx bx-chevron-left'></i></div>
+      <div class="arrow" id="next"><i class='bx bx-chevron-right'></i></div>
 
       <div id="carousel-vp">
         <div id="card-inner">
-          <div class="card">
+          <div style="background-color: #fac2bc;" class="card">
             <img src="assets\images\offer1.png" alt="">
             <div>
               <p>Customise</p>
@@ -31,7 +31,7 @@
               <button>Order Now</button>
             </div>
           </div>
-          <div class="card">
+          <div style="background-color: #ecc08d;" class="card">
             <img src="assets\images\offer1.png" alt="">
             <div>
               <p>Customise</p>
@@ -39,7 +39,7 @@
               <button>Order Now</button>
             </div>
           </div>
-          <div class="card">
+          <div style="background-color: lightblue;" class="card">
             <img src="assets\images\offer1.png" alt="">
             <div>
               <p>Customise</p>
@@ -47,7 +47,7 @@
               <button>Order Now</button>
             </div>
           </div>
-          <div class="card">
+          <div style="background-color: #AEC3AE;" class="card">
             <img src="assets\images\offer1.png" alt="">
             <div>
               <p>Customise</p>
@@ -55,7 +55,7 @@
               <button>Order Now</button>
             </div>
           </div>
-          <div class="card">
+          <div style="background-color: #A68DAD;" class="card">
             <img src="assets\images\offer1.png" alt="">
             <div>
               <p>Customise</p>
