--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -57,9 +57,8 @@
       position: relative;
       max-width: 900px;
       margin: auto;
-      background-color: #fac2bc;
+      // background-color: #fac2bc;
       font-size: small;
-      border: 1px solid lightcoral;
       border-radius: 10px;
       display: flex;
       flex-wrap: nowrap;
@@ -67,10 +66,10 @@
       align-items: center;
       .arrow {
         position: absolute;
-        top: 50%;
+        top: 40%;
         display: flex;
-        width: 45px;
-        height: 45px;
+        width: 3rem;
+        height: 3rem;
         justify-content: center;
         align-items: center;
         border-radius: 50%;
@@ -90,11 +89,13 @@
           margin-bottom: 0.5rem;
           font-size: large;
           font-weight: 800;
+          color: white;
         }
         button {
           font-weight: 1000;
           margin: 1rem 0;
           border: 1px solid #c96c80;
+          border: none;
           border-radius: 8px;
           padding: 0.6rem 0.6rem 0.5rem 0.6rem;
           color: #c96c80;
@@ -138,7 +139,7 @@
     .card {
       width: 20rem;
       height: 10rem;
-      border: 2px solid white;
+      border: 2px solid #ecc08d;
       border-radius: 15px;
       overflow: hidden;
       display: flex;
@@ -207,15 +208,15 @@
       }
     }
   }
-}
-
-@media (max-width: 770px) {
   #carousel-vp {
     width: 510px;
   }
 }
 
-@media (max-width: 510px) {
+@media (max-width: 766px) {
+}
+
+@media (max-width: 425px) {
   #carousel-vp {
     width: 250px;
   }
