--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-navbar></app-navbar>
-<app-home></app-home>
-<!-- <app-test></app-test> -->
+<!-- <app-navbar></app-navbar>
+<app-home></app-home> -->
+<app-test></app-test>
