discover section styles and html

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -68,7 +68,26 @@
       </div>
     </div>
   </div>
+  <h2 style="text-align: center;margin: 3rem 0px;font-size:1.2rem; padding: 0.5rem;">🍹Discover <span style="color: #c96c80;font-size: 1.8rem;">Delicious</span> Smoothies 😋</h2>
+
   <div class="discover_section">
+    <div class="all-discovers">
+      <div class="discover">
+        <img src="assets\images\logo.png" alt="">
+        <p>Blueberry-Almond Smoothies</p>
+        <p>Custome Smoothies</p>
+      </div>
+      <div class="discover">
+        <img src="assets\images\offer1.png" alt="">
+        <p>Blueberry-Almond Smoothies</p>
+        <p>Custome Smoothies</p>
+      </div>
+      <div class="discover">
+        <img src="assets\images\logo.png" alt="">
+        <p>Blueberry-Almond Smoothies</p>
+        <p>Custome Smoothies</p>
+      </div>
+    </div>
 
   </div>
   <div class="custom_section">
