work on discover section

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -72,7 +72,7 @@
 
   <div class="discover_section">
     <div class="all-discovers">
-      <div class="discover">
+      <!-- <div class="discover">
         <img src="assets\images\logo.png" alt="">
         <p>Blueberry-Almond Smoothies</p>
         <p>Custome Smoothies</p>
@@ -86,7 +86,7 @@
         <img src="assets\images\logo.png" alt="">
         <p>Blueberry-Almond Smoothies</p>
         <p>Custome Smoothies</p>
-      </div>
+      </div> -->
     </div>
 
   </div>
