signIn and signUp pages add

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-navbar></app-navbar>
-<app-home></app-home> 
+<!-- <app-home></app-home>  -->
+<app-sign-in></app-sign-in>
+<!-- <app-sign-up></app-sign-up> -->
