discover section completed

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -68,27 +68,19 @@
       </div>
     </div>
   </div>
-  <h2 style="text-align: center;margin: 3rem 0px;font-size:1.2rem; padding: 0.5rem;">🍹Discover <span style="color: #c96c80;font-size: 1.8rem;">Delicious</span> Smoothies 😋</h2>
+  <h2 style="text-align: center;margin: 3rem 0px;font-size:1.2rem; padding: 0.5rem;">🍹Discover <span
+      style="color: #c96c80;font-size: 1.8rem;">Delicious</span> Smoothies 😋</h2>
 
   <div class="discover_section">
     <div class="all-discovers">
-      <!-- <div class="discover">
-        <img src="assets\images\logo.png" alt="">
-        <p>Blueberry-Almond Smoothies</p>
-        <p>Custome Smoothies</p>
-      </div>
-      <div class="discover">
-        <img src="assets\images\offer1.png" alt="">
-        <p>Blueberry-Almond Smoothies</p>
-        <p>Custome Smoothies</p>
-      </div>
-      <div class="discover">
-        <img src="assets\images\logo.png" alt="">
-        <p>Blueberry-Almond Smoothies</p>
-        <p>Custome Smoothies</p>
-      </div> -->
+      <ng-container *ngFor="let x of data">
+        <div class="discover" >
+          <img style=" padding: 0.1rem; border-radius: 50%;" [style.backgroundColor]="x.bg" src='assets\images\{{x.url}}' alt="">
+          <p>{{x.title}}</p>
+          <p>{{x.subTitle}}</p>
+        </div>
+      </ng-container>
     </div>
-
   </div>
   <div class="custom_section">
 
