--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -74,8 +74,9 @@
   <div class="discover_section">
     <div class="all-discovers">
       <ng-container *ngFor="let x of data">
-        <div class="discover" >
-          <img style=" padding: 0.1rem; border-radius: 50%;" [style.backgroundColor]="x.bg" src='assets\images\{{x.url}}' alt="">
+        <div class="discover">
+          <img style=" padding: 0.1rem; border-radius: 50%;" [style.backgroundColor]="x.bg"
+            src='assets\images\{{x.url}}' alt="">
           <p>{{x.title}}</p>
           <p>{{x.subTitle}}</p>
         </div>
@@ -83,6 +84,76 @@
     </div>
   </div>
   <div class="custom_section">
+
+    <section class="left-custom">
+      <img src="assets\images\offer1.png" alt="">
+    </section>
+    <section class="right-custom">
+      <h2>Create your custom smoothies</h2>
+      <form>
+        <label for="quantity">Select Quantity</label>
+        <select name="quantity">
+          <option value="250 ml">250 ml</option>
+          <option value="300 ml">300 ml</option>
+          <option value="opel">350 ml</option>
+          <option value="audi">400 ml</option>
+          <option value="audi">500 ml</option>
+          <option value="audi">800 ml</option>
+          <option value="audi">1 L</option>
+        </select>
+        <label for="fruits">Add Fruits/Vegies</label>
+        <select name="fruits">
+          <option value="mango">Mango</option>
+          <option value="kiwi">Kiwi</option>
+          <option value="orange">Orange</option>
+          <option value="banana">Banana</option>
+          <option value="pineapple">Pineapple</option>
+          <option value="pomegranate">Pomegranate</option>
+          <option value="butterscotch">Butterscotch</option>
+          <option value="blueberries">Blueberries</option>
+          <option value="chocolate">Chocolate</option>
+          <option value="mixFruit">Mix Fruits</option>
+
+        </select>
+        <label for="milk">Add Ice-Cream Type</label>
+        <select name="milk">
+          <option value="ice">Plain Ice</option>
+          <option value="chocolate">Chocolate</option>
+          <option value="vanilla">Vanilla</option>
+          <option value="butterscotch">Butterscotch</option>
+          <option value="none">None</option>
+        </select>
+        <label for="protein">Select Protein</label>
+        <select name="protein">
+          <option value="volvo">Volvo</option>
+          <option value="saab">Saab</option>
+          <option value="opel">Opel</option>
+          <option value="audi">Audi</option>
+        </select>
+        <label for="toppings">Add Toppings</label>
+        <select name="toppings">
+          <option value="Granola">Granola</option>
+          <option value="Fresh Berries">Fresh Berries</option>
+          <option value="Coconut">Coconut</option>
+          <option value="Seeds">Seeds</option>
+          <option value="strawberries">strawberries</option>
+          <option value="Nuts and Seeds">Nuts and Seeds</option>
+          <option value="chia seeds">chia seeds</option>
+          <option value="Chopped Nuts">Chopped Nuts</option>
+          <option value="DryFruits">Dry Fruits</option>
+          <option value="Nut Butter">Nut Butter</option>
+          <option value="Cacao Nibs">Cacao Nibs</option>
+        </select>
+
+        <div class="btns">
+          <div class="feb-cart-btn">
+            <button><i class='bx bx-heart'></i></button>
+            <button><i class='bx bx-cart'></i></button>
+          </div>
+          <button class="order_now">order now</button>
+        </div>
+      </form>
+    </section>
 
   </div>
 
