--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -187,6 +187,121 @@
       }
     }
   }
+
+  .custom_section {
+    // background-color: lightblue;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 2rem;
+    gap: 2rem;
+    margin-top: 2rem;
+    .left-custom {
+      // background-color: lightcoral;
+      img {
+        height: 300px;
+        width: 300px;
+      }
+    }
+    .right-custom {
+      // margin: 2rem;
+      // background-color: lightgreen;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      /* align-content: center; */
+      flex-wrap: nowrap;
+      flex-direction: column;
+      form {
+        // background-color: lightyellow;
+        padding: 2rem;
+        // gap: 0.5rem;
+        display: flex;
+        // align-items: center;
+        justify-content: center;
+        /* align-content: center; */
+        flex-wrap: nowrap;
+        flex-direction: column;
+        label {
+          margin-left: 0.2rem;
+          margin-bottom: 0.1rem;
+          font-size: small;
+          font-weight: bold;
+        }
+        input,select {
+          margin-bottom: 1.5rem;
+          border-radius: 5px;
+          border: 0.5px solid lightgray;
+          height: 1.5rem;
+          background-color: rgb(255, 250, 251);
+          width: 15rem;
+          padding: 0rem 0.5rem;
+          box-shadow: 0px 1px 2px #f6b5b1;
+
+          &:focus {
+            outline: none;
+            border: 1px solid #c96c80;
+            box-shadow: 0px 2px 10px #db7f79;
+          }
+          &:hover {
+            box-shadow: 0px 1px 8px #ecc08d;
+          }
+        }
+
+        .btns {
+          display: flex;
+          justify-content: space-between;
+          flex-wrap: nowrap;
+          flex-direction: row;
+          padding: 0.4rem;
+          .feb-cart-btn {
+            button {
+              margin-right: 1rem;
+              border: 1px solid #db7f79;
+              border-radius: 100%;
+              padding: 0.42rem 0.4rem 0.32rem 0.4rem;
+              color: white;
+              background-color: #db7f79;
+              box-shadow: 0px 5px 10px #db7f79;
+              cursor: pointer;
+              &:first-child {
+                cursor: pointer;
+                background-color: white;
+                color: #db7f79;
+                &:hover {
+                  border: 1px solid #c96c80;
+                  background-color: white;
+                  box-shadow: 0px 7px 10px #c96c80;
+                }
+              }
+              &:hover {
+                border: 1px solid #c96c80;
+                background-color: #c96c80;
+                box-shadow: 0px 7px 10px #c96c80;
+              }
+            }
+          }
+          .order_now {
+            border: 1px solid #db7f79;
+            border-radius: 5px;
+            padding: 0.3rem 0.5rem;
+            color: white;
+            background-color: #db7f79;
+            box-shadow: 0px 5px 10px #db7f79;
+            cursor: pointer;
+            font-weight: bold;
+            &:hover {
+              border: 1px solid #c96c80;
+              background-color: #c96c80;
+              box-shadow: 0px 7px 10px #c96c80;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 @media screen and (max-width: 767px) {
   .home_page {
