--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -53,6 +53,7 @@
   }
 
   .offer_section {
+    margin-top: 5rem;
     .all_card {
       position: relative;
       max-width: 900px;
@@ -189,7 +190,6 @@
   }
 
   .custom_section {
-    // background-color: lightblue;
     display: flex;
     flex-wrap: wrap;
     align-content: center;
@@ -197,31 +197,30 @@
     align-items: center;
     padding: 2rem;
     gap: 2rem;
-    margin-top: 2rem;
+    margin-top: 5rem;
     .left-custom {
       // background-color: lightcoral;
+      border-radius: 50%;
+      padding: 0.2rem;
+      border: 4px solid #ffd8ab;
+      box-shadow: 0px 0px 50px 0.5px #ffaabb;
       img {
+        border-radius: 50%;
         height: 300px;
         width: 300px;
+        border: 2px solid #ffa2b6;
       }
     }
     .right-custom {
-      // margin: 2rem;
-      // background-color: lightgreen;
       display: flex;
       align-items: center;
       justify-content: center;
-      /* align-content: center; */
       flex-wrap: nowrap;
       flex-direction: column;
       form {
-        // background-color: lightyellow;
         padding: 2rem;
-        // gap: 0.5rem;
         display: flex;
-        // align-items: center;
         justify-content: center;
-        /* align-content: center; */
         flex-wrap: nowrap;
         flex-direction: column;
         label {
@@ -230,7 +229,8 @@
           font-size: small;
           font-weight: bold;
         }
-        input,select {
+        input,
+        select {
           margin-bottom: 1.5rem;
           border-radius: 5px;
           border: 0.5px solid lightgray;
@@ -302,6 +302,7 @@
       }
     }
   }
+  
 }
 @media screen and (max-width: 767px) {
   .home_page {
