--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,13 @@
-<app-navbar></app-navbar>
-<app-home></app-home> 
+<!-- <app-navbar></app-navbar> -->
+<!-- <app-home></app-home>  -->
 <!-- <app-sign-in></app-sign-in> -->
 <!-- <app-sign-up></app-sign-up> -->
 <!-- <app-test></app-test> -->
+<!-- <ul>
+    <a routerLink="/">home</a> <br>
+    <a routerLink="sign-in">signin</a><br>
+    <a routerLink="sign-up">signin</a><br>
+</ul>
+<router-outlet></router-outlet> -->
+<!-- <app-sign-in routerLink="sign-in"></app-sign-in> -->
+<router-outlet></router-outlet>
