--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,6 +1,16 @@
 <div id="nav">
   <div class="tab">
-    <button class="menu_btn"><i class="bx bx-menu bx-sm"></i></button>
+    <button class="menu_btn">
+      <div class="dropdown">
+        <button class="dropbtn"><i class="bx bx-menu bx-sm"></i></button>
+        <div class="dropdown-content">
+          <a href="#">Menu</a>
+          <a href="#">My Orders</a>
+          <a href="#">Favorite</a>
+          <a href="#">Sign Out</a>
+        </div>
+      </div>
+    </button>
     <img src="assets\images\logo.png" id="logo" alt="logo" />
     <div class="user_card_btn">
       <button class="user_btn"><i class='bx bx-user'></i></button>
@@ -8,15 +18,27 @@
     </div>
   </div>
   <div class="desktop">
-    <nav>
+    <nav style="display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    align-items: center;">
       <img src="assets\images\logo.png" id="logo" alt="logo" />
       <ul class="navmenu">
         <li><a href="#">Menu</a></li>
         <li><a href="#">FAQs</a></li>
-        <li><a href="#">About Us</a></li>
         <li><a href="#">My Orders</a></li>
-        <li><button class="accounts_btn">Accounts</button></li>
-        <li><button class="cart_btn"><i class='bx bx-cart'></i></button></li>
+        <li><button class="accounts_btn">
+            <div class="dropdown">
+              <button class="dropbtn">Account</button>
+              <div class="dropdown-content">
+                <a href="#">Profile</a>
+                <a href="#">Favorite</a>
+                <a href="#">Sign Out</a>
+              </div>
+            </div>
+          </button></li>
+        <li><button class="cart_btn"><i class='bx bx-sm bx-cart'></i></button></li>
       </ul>
     </nav>
   </div>
