--- a/client/src/app/navbar/navbar.component.scss
+++ b/client/src/app/navbar/navbar.component.scss
@@ -4,9 +4,11 @@ body {
 }
 
 #nav {
-  // background-color: lightsalmon;
+  background-color: white;
+  position: sticky;
+  top: 0px;
   width: 100%;
-  height: 2.5rem;
+  // height: 2.5rem;
   .desktop {
     img {
       height: 4rem;
@@ -27,22 +29,65 @@ body {
   list-style: none; /* gets rid of bullet points */
   text-align: left;
   padding: 0px -10px 0px -10px;
-  margin-right: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // margin-right: 2rem;
   .accounts_btn {
     border: 1px solid #c96c80;
     border-radius: 5px;
-    color: #c96c80;
-    font-weight: 600;
-    padding: 0.2rem 0.32rem;
+    padding: 0.1rem;
+    .dropbtn {
+      padding: 0.3rem 0.5rem;
+      color: #c96c80;
+      font-weight: 600;
+      border: none;
+      cursor: pointer;
+    }
+
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 100px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+      border-radius: 20px;
+    }
+
+    .dropdown-content a {
+      color: #c96c80;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+
+    .dropdown-content a:hover {
+      background-color: #fac2bc;
+      border-radius: 20px;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+      border-radius: 20px;
+    }
   }
   .cart_btn {
     border: 1px solid #c96c80;
     border-radius: 100%;
-    padding: 0.3rem 0.3rem 0.25rem 0.3rem;
+    // padding: 0.3rem 0.3rem 0.25rem 0.3rem;
+    padding: 0.2rem;
+    // padding: 0.5rem 0.6rem;
     color: white;
     background-color: #c96c80;
     margin: auto;
     box-shadow: 0px 5px 10px #c96c80;
+    cursor: pointer;
   }
 }
 
@@ -84,6 +129,7 @@ body {
       box-shadow: 0px 5px 10px #c96c80;
     }
     .user_btn {
+      box-shadow: 0px 4px 11px #c96c80;
       border: 1px solid #c96c80;
       border-radius: 100%;
       color: #c96c80;
@@ -91,12 +137,50 @@ body {
       padding: 0.3rem 0.3rem 0.25rem 0.3rem;
     }
     .menu_btn {
-      padding: 0;
       border: none;
-      background: none;
-      color: #c96c80;
-      font-weight: 600;
-      padding: 0.3rem 0.3rem 0.25rem 0.3rem;
+      background-color: white;
+      color: none;
+      .dropbtn {
+        border: none;
+        cursor: pointer;
+        padding: 0;
+        border: none;
+        background: none;
+        color: #c96c80;
+        padding: 0.3rem 0.3rem 0.25rem 0.3rem;
+      }
+
+      .dropdown {
+        position: relative;
+        display: inline-block;
+        background: none;
+      }
+
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: white;
+        min-width: 100px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+        border-radius: 20px;
+      }
+
+      .dropdown-content a {
+        color: #c96c80;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        border-radius: 20px;
+      }
+
+      .dropdown-content a:hover {
+        background-color: #f1f1f1;
+      }
+
+      .dropdown:hover .dropdown-content {
+        display: block;
+      }
     }
     #logo {
       margin-left: 3rem;
