--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
 <!-- <app-home></app-home>  -->
 <!-- <app-sign-in></app-sign-in> -->
 <!-- <app-sign-up></app-sign-up> -->
@@ -10,4 +10,5 @@
 </ul>
 <router-outlet></router-outlet> -->
 <!-- <app-sign-in routerLink="sign-in"></app-sign-in> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<app-test-address></app-test-address>
