--- a/client/src/app/test-address/test-address.component.html
+++ b/client/src/app/test-address/test-address.component.html
@@ -1,4 +1,4 @@
-<h1>Place Names</h1>
+<h1 class="test-class">Place Names</h1>
 <ul *ngFor="let place of placeName">
     <li>{{place.Name}}</li>
 </ul>
