gards added and add routing in  auth moudle

--- a/client/src/app/auth/sign-up/sign-up.component.html
+++ b/client/src/app/auth/sign-up/sign-up.component.html
@@ -6,6 +6,7 @@
         <input type="password" ngModel name="password" placeholder="Enter Password">
         <input type="password" ngModel name="confarmpassword" placeholder="Confarm Password">
         <button>SING UP</button>
+        <a routerLink="../sign-in">Already have acount</a>
     </form>
 
 </div>
