--- a/client/src/app/auth/sign-in/sign-in.component.html
+++ b/client/src/app/auth/sign-in/sign-in.component.html
@@ -3,5 +3,6 @@
         <input type="email" ngModel name="email" placeholder="enter email" formControlName="email">
         <input type="password" ngModel name="password" placeholder="enter password" formControlName="password">
         <button>SIGN IN</button>
+        <a routerLink="../sign-up">Not have acount</a>
     </form>
 </div>
