--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -261,7 +261,8 @@
               margin-right: 1rem;
               border: 1px solid #db7f79;
               border-radius: 100%;
-              padding: 0.42rem 0.4rem 0.32rem 0.4rem;
+              // padding: 0.42rem 0.4rem 0.32rem 0.4rem;
+              padding: 0.6rem 0.6rem 0.4rem 0.6rem;
               color: white;
               background-color: #db7f79;
               box-shadow: 0px 5px 10px #db7f79;
