when user is not sign-in redirect to signin page

--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
           <a href="#">Menu</a>
           <a href="#">My Orders</a>
           <a href="#">Favorite</a>
-          <a href="#">Sign Out</a>
+          <a onclick="signOut()" >Sign Out</a>
         </div>
       </div>
     </button>
@@ -34,7 +34,7 @@
               <div class="dropdown-content">
                 <a href="#">Profile</a>
                 <a href="#">Favorite</a>
-                <a href="#">Sign Out</a>
+                <a (click)="signOut()" >Sign Out</a>
               </div>
             </div>
           </button></li>
