--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,2 @@
-<!-- <app-navbar></app-navbar> -->
-<!-- <app-home></app-home> -->
-<!-- <app-sign-in></app-sign-in> -->
-<!-- <app-sign-up></app-sign-up> -->
-<!-- <app-test></app-test> -->
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
-<!-- <app-sign-in routerLink="sign-in"></app-sign-in> -->
-<!-- <router-outlet></router-outlet> -->
-<!-- <app-test-address></app-test-address> -->
