--- a/client/src/app/footer/footer.component.scss
+++ b/client/src/app/footer/footer.component.scss
@@ -1,5 +1,6 @@
 #footer {
-  margin-top: 5rem;
+  // margin-top: 5rem;
+  margin-top: auto;
   .main-footer {
     padding: 30px 0;
     display: flex;
