--- a/client/src/app/faq/faq.component.scss
+++ b/client/src/app/faq/faq.component.scss
@@ -7,6 +7,7 @@
   justify-content: space-evenly;
   align-items: center;
   align-content: center;
+  z-index: -10;
   .left-faq {
     // width: 50%;
     img {
