--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
 <router-outlet></router-outlet>
-<app-test-a></app-test-a>
-<app-vhome></app-vhome>
+<!-- <app-test-a></app-test-a> -->
+<!-- <app-vhome></app-vhome> -->
