--- a/client/src/app/admin/components/home/home.component.scss
+++ b/client/src/app/admin/components/home/home.component.scss
@@ -65,7 +65,7 @@
         flex-wrap: nowrap;
         padding: 0.7rem;
         align-items: center;
-        z-index: -1;
+        // z-index: -1;
         .arrow {
           position: absolute;
           top: 40%;
