some changes in sign-in

--- a/client/src/app/auth/sign-in/sign-in.component.html
+++ b/client/src/app/auth/sign-in/sign-in.component.html
@@ -8,20 +8,22 @@
 </div> -->
 
 <section class="sign-form">
-    <div class="login-form">
+    <form [formGroup]="loginForm" (ngSubmit)="onsignIn()" class="login-form">
         <h1>Welcome Back!</h1>
         <div class="login-input-container">
-            <input class="input-content" type="email" placeholder="" maxlength="50" required />
+            <input class="input-content" ngModel type="email" name="email" placeholder="" formControlName="email"
+                maxlength="50" required />
             <label>Email</label>
         </div>
         <div class="login-input-container">
-            <input class="input-content" type="password" placeholder="" maxlength="50" required />
+            <input class="input-content" ngModel placeholder="" type="password" name="password"
+                formControlName="password" maxlength="50" required />
             <label>Password</label>
         </div>
         <div class="login-sub">
             <div class="remember">
                 <div id="checkbox" (click)="rememberCheckBox()">
-                    <i [style.display]="rememberCheckBoxDisplay" class='bx bx-check'></i>
+                    <i [style.display]="rememberCheckBoxDisplay" style="color: #c96c80;" class='bx bx-check'></i>
                 </div>
                 <p style="font-size: 15px;">Remeber me</p>
             </div>
@@ -29,11 +31,11 @@
                 <p style="font-size: 15px;color: #c96c80;cursor: pointer;">Forgot password?</p>
             </div>
         </div>
-        <div class="login-btn">
+        <div class="login-btn" (click)="onsignIn()">
             <p>Log In</p>
         </div>
         <div class="sign-up">
-            <p>Don't have an account? <b>Sign up!</b></p>
+            <p>Don't have an account? <b><a routerLink="../sign-up">Sign up!</a></b></p>
         </div>
-    </div>
+    </form>
 </section>
