--- a/client/src/app/auth/sign-up/sign-up.component.scss
+++ b/client/src/app/auth/sign-up/sign-up.component.scss
@@ -1,22 +1,123 @@
-.outer {
-  background-color: lightblue;
-  height: 50vh;
-  width: 50wh;
-  margin: auto;
-  form {
-    display: flex;
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    input {
-      height: 20px;
-      width: 200px;
+// .outer {
+//   background-color: lightblue;
+//   height: 50vh;
+//   width: 50wh;
+//   margin: auto;
+//   form {
+//     display: flex;
+//     display: flex;
+//     flex-wrap: nowrap;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
+//     gap: 20px;
+//     input {
+//       height: 20px;
+//       width: 200px;
+//     }
+//     button {
+//       padding: 1rem;
+//     }
+//   }
+// }
+
+.sign-form {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background-image: url("https://images.unsplash.com/photo-1618005198919-d3d4b5a92ead?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=4000&q=80");
+  background-position: center;
+  background-size: cover;
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  color: #fff;
+
+  .sign-up-form {
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    padding: 2rem;
+    border-radius: 0.4rem;
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.1);
+    min-width: 260px;
+    h1 {
+      text-align: center;
     }
-    button {
-      padding: 1rem;
+    .sign-up-input-container {
+      margin-top: 1.5rem;
+    }
+    label {
+      font-weight: 400;
+      font-size: 1rem;
+    }
+
+    .input-content {
+      height: 40px;
+      background-color: transparent;
+      border: none;
+      border-bottom: 1px solid #fff;
+      font-size: 16px;
+      width: 100%;
+      color: #fff;
+      margin: 1px;
+      padding: 1px;
+    }
+
+    label {
+      position: absolute;
+      margin-top: -30px;
+      pointer-events: none;
+      transition: 0.3s;
+      font-size: 16px;
+    }
+
+    input:focus ~ label,
+    input:not(:placeholder-shown) ~ label {
+      margin-top: -60px;
+      font-size: 12px;
+    }
+
+    .input-content:focus {
+      outline: none !important;
+    }
+
+
+    .sign-up-btn {
+      background-color: #db7f79;
+      margin-top: 2rem;
+      padding: 0.5rem;
+      border-radius: 5rem;
+      transform: scale(1);
+      transition: 0.2s;
+      cursor: pointer;
+    }
+
+    .sign-up-btn:active {
+      transform: scale(0.95);
+    }
+
+    .sign-up-btn p {
+      color: white;
+      text-align: center;
+    }
+
+    .sign-in {
+      margin-top: 1rem;
+      text-align: center;
+      font-size: 14px;
+    }
+
+    .sign-in b {
+      font-weight: 800;
+      font-size: 15px;
+      cursor: pointer;
+      a {
+        color: #c96c80;
+        // text-decoration: none;
+      }
     }
   }
 }
