all change today

--- a/client/src/app/admin/components/profile/profile.component.html
+++ b/client/src/app/admin/components/profile/profile.component.html
@@ -1,1 +1,85 @@
-<p>profile works!</p>
+<div class="profile">
+    <section class="image">
+        <img style="height: 200px; width: 200px;" src="assets\images\offer1.png" alt="">
+    </section>
+    <section class="containts">
+        <form class="">
+            <div class="user-details">
+                <div class="user-name">
+                    <label for="name">Name</label>
+                    <input type="text" name="name">
+                </div>
+
+                <div class="user-email">
+                    <label for="email">Email</label>
+                    <input type="email" name="email">
+                </div>
+
+                <div class="user-phone">
+                    <label for="phone">Phone Number</label>
+                    <input type="number" name="phone">
+                </div>
+
+                <div class="user-password">
+                    <label for="password">Password</label>
+                    <input type="password" name="password">
+                </div>
+
+            </div>
+            <div class="address">
+
+                <div class="house">
+                    <label for="house">House Number</label>
+                    <input type="text" name="house">
+                </div>
+
+                <div class="city">
+                    <label for="city">City/Town</label>
+                    <input type="text" name="city">
+                </div>
+
+                <div class="locality">
+                    <label for="locality">Locality</label>
+                    <input type="text" name="locality">
+                </div>
+
+                <div class="pin-code">
+                    <label for="pin-code">Pin Code</label>
+                    <input type="number" name="pin-code">
+                </div>
+
+                <div class="landmark">
+                    <label for="landmark">Landmark</label>
+                    <input type="text" name="landmark">
+                </div>
+
+                <div class="state">
+                    <label for="state">State</label>
+                    <input type="text" disabled name="state">
+                </div>
+
+                <!-- <div class="alternative-phone">
+                    <label for="alternative-phone">Alternative</label>
+                    <input type="number" name="alternative-phone">
+                </div> -->
+
+                <!-- <section class="home-work">
+                    <label for="home-work">Home/Work</label>
+                    <input type="radio" id="home" name="home">
+                    <label for="home">Home</label><br>
+                    <input type="radio" id="work" name="work">
+                    <label for="work">Work</label><br>
+                </section> -->
+
+                <div class="home-work">
+                    <div class="home-work-btn">
+                        <button>Home</button>
+                        <button>Work</button>
+                    </div>
+                </div>
+
+            </div>
+        </form>
+
+    </section>
+</div>
